# reliablerag

./: .env.example  SETUP.md  pyproject.toml
docs/: colab.md  kaggle.md  local.md
evaluation/: cuad_trials.md
notebooks/: 01_basic_rag.ipynb  02_cuad_rag.ipynb
references/: README.md
references/01_Research_papers/: README.md
references/02_Tools_Utilities/Code_snippets/: 01_Basic_RAG.ipynb  README.md
references/02_Tools_Utilities/Code_snippets/chroma_db/: chroma.sqlite3
src/reliablerag/: __init__.py  chain.py  env.py  evaluation.py  providers.py  retriever.py
